public enum GameStatus {
    PLAY,
    LOSE,
    WIN
}
